--- a/rules/package.json
+++ b/rules/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@gamepark/board-game-template",
+  "name": "@gamepark/a-fistful-of-meeples",
   "version": "0.0.0",
-  "description": "Board Game Template rules for Game Park",
+  "description": "A Fistful of Meeples - rules for Game Park",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
