work in progress on rules. 4 phases & moves are implemented (still raw)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "rules",
     "app"
   ],
-  "author": "Romain Fromi <romain@game-park.com> (https://game-park.com/)",
+  "author": "Jagrin <jagrin@jagrin.fr>",
   "license": "ISC",
   "devDependencies": {
     "lerna": "^4.0.0",
