--- a/rules/package.json
+++ b/rules/package.json
@@ -7,7 +7,7 @@
   "files": [
     "dist"
   ],
-  "author": "Romain Fromi <romain@game-park.com> (https://game-park.com/)",
+  "author": "Jagrin <jagrin@free.fr>",
   "license": "ISC",
   "publishConfig": {
     "access": "public"
