--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react-dnd-multi-backend": "^6.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "avataaars": "^1.2.1",
     "customize-cra": "^1.0.0",
     "emotion-normalize": "^11.0.1",
     "i18next": "^20.2.4",
